rgbds-0.6.1/test/asm/macro-arg-in-string.err
error: macro-arg-in-string.asm(12):
    Illegal character escape '!'
error: Assembly aborted (1 error)!
